fix edit panel overflow-x and added bottom padding

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -105,10 +105,13 @@
   box-shadow: none;
   z-index: 200;
   overflow-y: scroll;
+  overflow-x: hidden;
+  padding-bottom: 5em;
 }
 
 .edit-panel {
   overflow-y: scroll;
+  overflow-x: hidden;
   background-color: transparent;
 }
 
